# RallySportRacing

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Models/: DirtRoadModel.gltf  EnvironmentRallyTrack.gltf  HighwayModel.gltf  PorscheGT3.gltf  SimpleCarAppliedTransforms.gltf  SimpleEnvironment.gltf  TerrainCollisionShape.gltf  TwoSidedWheel.gltf  Wall.gltf  light.gltf  test.gltf
RallySportRacing/: CMakeLists.txt  ModelLoader.cpp  SDLWindowHandler.cpp  SDLWindowHandler.h  main.cpp
RallySportRacing/Audio/: SoundSource.cpp  SoundSource.h  audio.cpp  audio.h
RallySportRacing/Debugging/: DebugDraw.cpp  DebugDraw.h
RallySportRacing/Game/: DebugDraw.cpp  DebugDraw.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  Vehicle.cpp  Vehicle.h
RallySportRacing/Networking/: Networking.cpp  Networking.h  Player.cpp  Player.h  PlayerData.cpp  PlayerData.h  PlayerTime.cpp  PlayerTime.h
RallySportRacing/Physics/: Physics.cpp  Physics.hpp
RallySportRacing/Rendering/: CubeMapLoader.cpp  CubeMapLoader.h  FrameBufferObject.cpp  FrameBufferObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParticleSystem.cpp  ParticleSystem.h  SDLWindowHandler.cpp  SDLWindowHandler.h  SubMesh.cpp  SubMesh.h  Text2D.cpp  Text2D.h
RallySportRacing/Services/: TCPClient.cpp  TCPClient.h  UDPClient.cpp  UDPClient.h
RallySportRacing/Services/Protocol/: Command.cpp  Command.h  ProtocolParser.cpp  ProtocolParser.h
RallySportRacing/Shaders/: 2DText.frag  2DText.vert  Background.frag  Background.vert  CopyTexture.frag  CopyTexture.vert  Cubemap.vert  CubemapToIrradiance.frag  Environment.frag  Environment.vert  HdrToCubemap.frag  Hitbox.frag  Hitbox.vert  Particle.frag  Particle.vert  ReflectivityMap.frag  Shader.frag  Shader.vert  ShadowDebug.frag  ShadowDebug.vert  ShadowMap.frag  ShadowMap.vert  Skybox.frag  Skybox.vert
RallySportRacing/Utils/: GameTimer.cpp  GameTimer.h  HdrFileGenerator.cpp  HdrFileGenerator.h  Random.cpp  Random.h
Textures/Background/: irradiance.hdr  kloppenheim_06_2k_1.hdr  kloppenheim_06_2k_2.hdr  kloppenheim_06_2k_3.hdr
imgui/: CMakeLists.txt
